@@ -1,3 +1,12 @@
+2016-12-05  Pitchumani Sivanupandi  <s.pitchumani@gmail.com>
+
+	* Makefile: Add build steps for new file gdbserver.c.
+	* avrtest.c (main): Run avrtest in gdbserver mode option specified.
+	* gdbserver.c: New file for gdbserver functions.
+	* options.c: Add option -g to for gdbserver mode. Add -p option
+	for port number.
+	* options.def: Likewise.
+
 2016-11-23  Martin Ettl  <ettlmartin@users.sf.net>
 
 	* gen-flag-tables.c (main): Close input file in case of an error.
